# Taskly

./: .gitignore  CMakeLists.txt  Makefile  README.md  Taskly  a.out  build.bfg  config.sample  taskly.c  taskly.go  taskly.h  taskly.sublime-project
bullet/: bullet.cc  bullet.h  config.cc  main.cc  note.cc  util.cc
bullet/include/bullet/: bullet.h  config.h  note.h  util.h
include/Taskly/: task.hpp  view.hpp
src/: app.cpp  task.cpp  view.cpp
tuitetris/: main.cc  screen.cc  util.cc
tuitetris/include/tuitetris/: game.h  game_piece.h  moves.h  screen.h  util.h
